# sz_detection_challenge2025

./: .dockerignore  .gitignore  01-pull_data.py  02-feature_extraction.py  03-extract_labels.py  04-features_for_inference.py  05-incremental_learning.py  05-ml_pipeline.py  06-inference.py  Dockerfile  LICENSE  README.md  compose.yml  config.toml  features_config.yaml  main.py  models.yaml  pyproject.toml  test_main.py
data/logs/: feature_extraction_times.txt
model/: mrmr.pkl  scaler.pkl  xgboost.pkl
src/szdetect/: centrality_features.py  connectivity.py  efficiency_features.py  example_new_feature.py  model.py  predictions_to_df.py  project_settings.py  pull_data.py  pull_features.py  write_predictions.py
tests/: opt_regularization.py  test_connectivity.py  test_example_new_feature.py  test_features.py  test_inference.py  test_labels.py  test_ml.py  test_pipeline_const.py  test_pivot.py  test_pred_to_dl.py  test_pull.features.py  test_pull_features.py  test_seizures.py  test_timescoring.py
tests/test_data/: connectivity_segmented.npy  eeg.npy  eeg_segmented_10s.npy  features.db  features.parquet  labels.parquet  tuh_sz_bids_000_00_00.parquet  tuh_sz_bids_000_03_00.parquet
tests/test_data/bids_datasets/TUH_abnormal/eval/abnormal/01_tcp_ar/: aaaaabdo_s003_t000.edf  aaaaabsk_s007_t000.edf
tests/test_data/bids_datasets/TUH_abnormal/eval/normal/01_tcp_ar/: aaaaaayx_s002_t000.edf  (+2 more)
tests/test_data/dl/: batch_eeg.npy  batch_spectrogram.npy
tests/test_data/features/: tuh_sz_bids_007_00_00.parquet  tuh_sz_bids_020_01_05.parquet  tuh_sz_bids_107_04_08.parquet
